--- a/telegram/translations/de_DE.json
+++ b/telegram/translations/de_DE.json
@@ -808,10 +808,10 @@
   "MdVoC": "Failed to verify status. Please try again.",
   "2PjJHN": "Konto überprüfen",
   "4hTtL9": "Überprüfen Sie Ihr Telegrammkonto",
+  "3fOrvV": "Telegram Attestation is only available through the Origin Marketplace app.",
   "2KQpoG": "Wir werden niemals in Ihrem Namen posten.",
   "2Ezyas": "Was wird auf der Blockchain sichtbar sein?",
   "44w6ur": "Ihr Telegramm-Benutzername und Ihre Konto-ID",
-  "1oUwGb": "Click 'Verify' to continue",
   "3jUQ7x": "Überprüfen Sie die Website",
   "vyn8P": "Geben Sie unten Ihre Website-URL ein",
   "2DQDJG": "Was wird auf der Blockchain sichtbar sein?",
