--- a/telegram/translations/el_GR.json
+++ b/telegram/translations/el_GR.json
@@ -808,10 +808,10 @@
   "MdVoC": "Failed to verify status. Please try again.",
   "2PjJHN": "Επιβεβαιώστε το λογαριασμό",
   "4hTtL9": "Επαληθεύστε τον λογαριασμό τηλεγράφων σας",
+  "3fOrvV": "Telegram Attestation is only available through the Origin Marketplace app.",
   "2KQpoG": "Ποτέ δεν θα αναρτήσουμε για λογαριασμό σας.",
   "2Ezyas": "Τι θα είναι ορατό στο blockchain;",
   "44w6ur": "Το όνομα χρήστη και το αναγνωριστικό λογαριασμού του τηλεγραφήματος",
-  "1oUwGb": "Click 'Verify' to continue",
   "3jUQ7x": "Επαληθεύστε την ιστοσελίδα",
   "vyn8P": "Εισαγάγετε τη διεύθυνση URL του ιστοτόπου σας παρακάτω",
   "2DQDJG": "Τι θα είναι ορατό στο blockchain;",
