--- a/telegram/translations/ja_JP.json
+++ b/telegram/translations/ja_JP.json
@@ -808,10 +808,10 @@
   "MdVoC": "Failed to verify status. Please try again.",
   "2PjJHN": "アカウント を認証してください",
   "4hTtL9": "Telegramアカウントを認証してください",
+  "3fOrvV": "Telegram Attestation is only available through the Origin Marketplace app.",
   "2KQpoG": "あなたに代わって投稿することはありません。",
   "2Ezyas": "何がブロックチェーン上で表示されますか？",
   "44w6ur": "Telegramのユーザー名とアカウントID",
-  "1oUwGb": "Click 'Verify' to continue",
   "3jUQ7x": "ウェブサイトを認証してください",
   "vyn8P": "下記にあなたのウェブサイトのURLを入力してください",
   "2DQDJG": "何がブロックチェーン上で表示されますか？",
