--- a/telegram/translations/ko_KR.json
+++ b/telegram/translations/ko_KR.json
@@ -808,10 +808,10 @@
   "MdVoC": "Failed to verify status. Please try again.",
   "2PjJHN": "계정 인증",
   "4hTtL9": "텔레그램 계정을 인증하세요",
+  "3fOrvV": "Telegram Attestation is only available through the Origin Marketplace app.",
   "2KQpoG": "오리진은 절대 사용자를 대신하여 게시하지 않습니다",
   "2Ezyas": "어떤 것들이 블록체인 상에 기록되나요?",
   "44w6ur": "사용자의 텔레그램 username 그리고 계정 ID",
-  "1oUwGb": "Click 'Verify' to continue",
   "3jUQ7x": "웹사이트(Website) 를 인증해주세요",
   "vyn8P": "아래에 개인 사이트 URL을 입력하세요",
   "2DQDJG": "어떤 것들이 블록체인에 기록되나요?",
