--- a/telegram/translations/ro_RO.json
+++ b/telegram/translations/ro_RO.json
@@ -808,10 +808,10 @@
   "MdVoC": "Failed to verify status. Please try again.",
   "2PjJHN": "Verifica contul",
   "4hTtL9": "Verificați-vă contul Telegram",
+  "3fOrvV": "Telegram Attestation is only available through the Origin Marketplace app.",
   "2KQpoG": "Nu vom posta niciodată în numele tău.",
   "2Ezyas": "Ce va fi vizibil pe blockchain?",
   "44w6ur": "Numele de utilizator Telegram și ID-ul contului",
-  "1oUwGb": "Click 'Verify' to continue",
   "3jUQ7x": "Verificați site-ul web",
   "vyn8P": "Introdu mai jos adresa URL a site-ului",
   "2DQDJG": "Ce va fi vizibil pe blockchain?",
