--- a/telegram/translations/ru_RU.json
+++ b/telegram/translations/ru_RU.json
@@ -808,10 +808,10 @@
   "MdVoC": "Failed to verify status. Please try again.",
   "2PjJHN": "Подтвердить аккаунт",
   "4hTtL9": "Подтвердите свою учетную запись Telegram",
+  "3fOrvV": "Telegram Attestation is only available through the Origin Marketplace app.",
   "2KQpoG": "Мы никогда не будем размещать от вашего имени.",
   "2Ezyas": "Что будет видно в блокчейне?",
   "44w6ur": "Ваши логин и ID аккаунта Telegram",
-  "1oUwGb": "Click 'Verify' to continue",
   "3jUQ7x": "Подтвердить сайт",
   "vyn8P": "Введите URL-адрес вашего сайта ниже",
   "2DQDJG": "Что будет видно на блокчейне?",
