--- a/telegram/translations/nl_NL.json
+++ b/telegram/translations/nl_NL.json
@@ -808,10 +808,10 @@
   "MdVoC": "Failed to verify status. Please try again.",
   "2PjJHN": "Verifieer Account",
   "4hTtL9": "Verifieer uw Telegram-account",
+  "3fOrvV": "Telegram Attestation is only available through the Origin Marketplace app.",
   "2KQpoG": "We zullen nooit namens u posten.",
   "2Ezyas": "Wat zal zichtbaar zijn op de blockchain?",
   "44w6ur": "Uw Telegram-gebruikersnaam en account-ID",
-  "1oUwGb": "Click 'Verify' to continue",
   "3jUQ7x": "Controleer website",
   "vyn8P": "Voer hieronder uw website-URL in",
   "2DQDJG": "Wat zal zichtbaar zijn op de blockchain?",
