--- a/telegram/translations/zh_CN.json
+++ b/telegram/translations/zh_CN.json
@@ -808,10 +808,10 @@
   "MdVoC": "Failed to verify status. Please try again.",
   "2PjJHN": "验证账号",
   "4hTtL9": "验证您的电报账号",
+  "3fOrvV": "Telegram Attestation is only available through the Origin Marketplace app.",
   "2KQpoG": "我们将永远不会代表您发布",
   "2Ezyas": "区块链上会显示什么哪些数据？",
   "44w6ur": "您的Telegram账号用户名和ID",
-  "1oUwGb": "Click 'Verify' to continue",
   "3jUQ7x": "验证您的网址",
   "vyn8P": "在下面输入你的网址",
   "2DQDJG": "区块链上会显示什么哪些数据？",
