My new test build

--- a/maha/translations/es_ES.json
+++ b/maha/translations/es_ES.json
@@ -808,10 +808,10 @@
   "MdVoC": "Failed to verify status. Please try again.",
   "2PjJHN": "Verificar Cuenta",
   "4hTtL9": "Verifique su cuenta de Telegram",
+  "2gEaQA": "Telegram verification is only available through the Origin Marketplace app.",
   "2KQpoG": "Nunca publicaremos en su nombre.",
   "2Ezyas": "¿Qué será visible en la cadena de bloques?",
   "44w6ur": "Su nombre de usuario de Telegram y su ID de cuenta",
-  "1oUwGb": "Click 'Verify' to continue",
   "3jUQ7x": "Verificar sitio web",
   "vyn8P": "Ingrese la URL de su sitio web a continuación",
   "2DQDJG": "¿Qué será visible en la cadena de bloques?",
