--- a/maha/translations/fil_PH.json
+++ b/maha/translations/fil_PH.json
@@ -808,10 +808,10 @@
   "MdVoC": "Failed to verify status. Please try again.",
   "2PjJHN": "I-verify ang Account",
   "4hTtL9": "Patunayan ang Iyong Telegram Account",
+  "2gEaQA": "Telegram verification is only available through the Origin Marketplace app.",
   "2KQpoG": "Hindi ka namin mai-post sa ngalan mo.",
   "2Ezyas": "Ano ang makikita sa blockchain?",
   "44w6ur": "Ang iyong Telegram username at account ID",
-  "1oUwGb": "Click 'Verify' to continue",
   "3jUQ7x": "Patunayan ang Website",
   "vyn8P": "Ipasok ang iyong URL ng website sa ibaba",
   "2DQDJG": "Ano ang makikita sa blockchain?",
