--- a/maha/translations/hr_HR.json
+++ b/maha/translations/hr_HR.json
@@ -808,10 +808,10 @@
   "MdVoC": "Failed to verify status. Please try again.",
   "2PjJHN": "Potvrdi Račun",
   "4hTtL9": "Potvrdite račun Telegrama",
+  "2gEaQA": "Telegram verification is only available through the Origin Marketplace app.",
   "2KQpoG": "Nikada nećemo objaviti u vaše ime.",
   "2Ezyas": "Što će biti vidljivo na blockchainu?",
   "44w6ur": "Vaše Telegram korisničko ime i ID računa",
-  "1oUwGb": "Click 'Verify' to continue",
   "3jUQ7x": "Provjerite web mjesto",
   "vyn8P": "U nastavku unesite URL svoje web lokacije",
   "2DQDJG": "Što će biti vidljivo na blockchainu?",
