--- a/maha/translations/id_ID.json
+++ b/maha/translations/id_ID.json
@@ -808,10 +808,10 @@
   "MdVoC": "Failed to verify status. Please try again.",
   "2PjJHN": "verifikasi akun",
   "4hTtL9": "Verifikasi Akun Telegram Anda",
+  "2gEaQA": "Telegram verification is only available through the Origin Marketplace app.",
   "2KQpoG": "Kami tidak akan pernah memposting atas nama Anda.",
   "2Ezyas": "Apa yang akan terlihat di blockchain?",
   "44w6ur": "Nama pengguna dan ID akun Telegram Anda",
-  "1oUwGb": "Click 'Verify' to continue",
   "3jUQ7x": "Verifikasi Situs Web",
   "vyn8P": "Masukkan URL situs web Anda di bawah ini",
   "2DQDJG": "Apa yang akan terlihat di blockchain?",
