--- a/maha/translations/it_IT.json
+++ b/maha/translations/it_IT.json
@@ -808,10 +808,10 @@
   "MdVoC": "Failed to verify status. Please try again.",
   "2PjJHN": "Verifica l'Account",
   "4hTtL9": "Verifica il tuo Account Telegram",
+  "2gEaQA": "Telegram verification is only available through the Origin Marketplace app.",
   "2KQpoG": "Non pubblicheremo mai per tuo conto.",
   "2Ezyas": "Cosa sarà visibile sulla blockchain?",
   "44w6ur": "Il tuo ID e nome utente di Telegram",
-  "1oUwGb": "Click 'Verify' to continue",
   "3jUQ7x": "Verifica il sito web",
   "vyn8P": "Inserisci l'URL del tuo sito web qui sotto",
   "2DQDJG": "Cosa sarà visibile sulla blockchain?",
