--- a/maha/translations/pt_PT.json
+++ b/maha/translations/pt_PT.json
@@ -808,10 +808,10 @@
   "MdVoC": "Failed to verify status. Please try again.",
   "2PjJHN": "Verificar conta",
   "4hTtL9": "Verifique sua conta de telegrama",
+  "2gEaQA": "Telegram verification is only available through the Origin Marketplace app.",
   "2KQpoG": "Nós nunca publicaremos em seu nome.",
   "2Ezyas": "O que será visível na blockchain?",
   "44w6ur": "Seu nome de usuário e ID da conta do Telegram",
-  "1oUwGb": "Click 'Verify' to continue",
   "3jUQ7x": "Verificar site",
   "vyn8P": "Digite o URL do site abaixo",
   "2DQDJG": "O que será visível na blockchain?",
