--- a/maha/translations/tr_TR.json
+++ b/maha/translations/tr_TR.json
@@ -808,10 +808,10 @@
   "MdVoC": "Failed to verify status. Please try again.",
   "2PjJHN": "Hesabı Doğrula",
   "4hTtL9": "Telgraf Hesabınızı Doğrulayın",
+  "2gEaQA": "Telegram verification is only available through the Origin Marketplace app.",
   "2KQpoG": "Asla sizin adınıza göndermeyeceğiz.",
   "2Ezyas": "Blockchain üzerinde ne görünecek?",
   "44w6ur": "Telegram kullanıcı adınız ve hesap kimliğiniz",
-  "1oUwGb": "Click 'Verify' to continue",
   "3jUQ7x": "Web Sitesini Doğrula",
   "vyn8P": "Web sitenizin URL adresini aşağıya girin",
   "2DQDJG": "Blockchain üzerinde ne görünecek?",
