--- a/maha/translations/uk_UA.json
+++ b/maha/translations/uk_UA.json
@@ -808,10 +808,10 @@
   "MdVoC": "Failed to verify status. Please try again.",
   "2PjJHN": "Підтвердити рахунок",
   "4hTtL9": "Підтвердьте свій обліковий запис Telegram",
+  "2gEaQA": "Telegram verification is only available through the Origin Marketplace app.",
   "2KQpoG": "Ми ніколи не публікуємо від вашого імені.",
   "2Ezyas": "Що буде видно на блокчейні?",
   "44w6ur": "Ваше ім’я користувача та ідентифікатор облікового запису Telegram",
-  "1oUwGb": "Click 'Verify' to continue",
   "3jUQ7x": "Підтвердити веб-сайт",
   "vyn8P": "Введіть URL-адресу свого веб-сайту нижче",
   "2DQDJG": "Що буде видно на блокчейні?",
