--- a/maha/translations/vi_VN.json
+++ b/maha/translations/vi_VN.json
@@ -808,10 +808,10 @@
   "MdVoC": "Failed to verify status. Please try again.",
   "2PjJHN": "Xác nhận tài khoản",
   "4hTtL9": "Xác minh tài khoản Telegram của bạn",
+  "2gEaQA": "Telegram verification is only available through the Origin Marketplace app.",
   "2KQpoG": "Chúng tôi sẽ không bao giờ gửi thay mặt bạn.",
   "2Ezyas": "Điều gì sẽ được hiển thị trên blockchain?",
   "44w6ur": "Tên người dùng và tài khoản Telegram của bạn",
-  "1oUwGb": "Click 'Verify' to continue",
   "3jUQ7x": "Xác minh trang web",
   "vyn8P": "Nhập URL trang web của bạn dưới đây",
   "2DQDJG": "Điều gì sẽ được hiển thị trên blockchain?",
