--- a/maha/translations/zh_TW.json
+++ b/maha/translations/zh_TW.json
@@ -808,10 +808,10 @@
   "MdVoC": "Failed to verify status. Please try again.",
   "2PjJHN": "驗證賬戶",
   "4hTtL9": "驗證您的電報帳戶",
+  "2gEaQA": "Telegram verification is only available through the Origin Marketplace app.",
   "2KQpoG": "我們將永遠不會代表您發帖。",
   "2Ezyas": "在區塊鏈上將看到什麼？",
   "44w6ur": "您的電報用戶名和帳戶ID",
-  "1oUwGb": "Click 'Verify' to continue",
   "3jUQ7x": "驗證網站",
   "vyn8P": "在下面輸入您的網站網址",
   "2DQDJG": "在區塊鏈上將看到什麼？",
