--- a/maha/translations/fr_FR.json
+++ b/maha/translations/fr_FR.json
@@ -808,10 +808,10 @@
   "MdVoC": "Failed to verify status. Please try again.",
   "2PjJHN": "Vérifier le compte",
   "4hTtL9": "Vérifiez votre compte Telegram",
+  "2gEaQA": "Telegram verification is only available through the Origin Marketplace app.",
   "2KQpoG": "Nous ne posterons rien en votre nom.",
   "2Ezyas": "Qu'est-ce qui sera visible sur la blockchain?",
   "44w6ur": "ID de votre compte Telegram",
-  "1oUwGb": "Click 'Verify' to continue",
   "3jUQ7x": "Vérifiez votre site web",
   "vyn8P": "Entrez l'URL de votre site ci-dessous",
   "2DQDJG": "Qu'est-ce qui sera visible sur la blockchain?",
