--- a/maha/translations/th_TH.json
+++ b/maha/translations/th_TH.json
@@ -808,10 +808,10 @@
   "MdVoC": "Failed to verify status. Please try again.",
   "2PjJHN": "ตรวจสอบบัญชี",
   "4hTtL9": "ยืนยันบัญชีโทรเลขของคุณ",
+  "2gEaQA": "Telegram verification is only available through the Origin Marketplace app.",
   "2KQpoG": "เราจะไม่โพสต์ในนามของคุณ",
   "2Ezyas": "สิ่งที่จะปรากฏบนบล็อกเชน",
   "44w6ur": "ชื่อผู้ใช้และ ID บัญชีโทรเลขของคุณ",
-  "1oUwGb": "Click 'Verify' to continue",
   "3jUQ7x": "ยืนยันเว็บไซต์",
   "vyn8P": "ป้อน URL เว็บไซต์ของคุณด้านล่าง",
   "2DQDJG": "สิ่งที่จะปรากฏบนบล็อกเชน",
